Fixed Spacing

--- a/src/app/admin/admin-analytics/admin-analytics.component.css
+++ b/src/app/admin/admin-analytics/admin-analytics.component.css
@@ -281,6 +281,7 @@ p,
   background-color: #eafae5;
   border: 3px solid #168021;
 }
+
 .column h2 {
   background-color: #168021;
   color: white;
@@ -291,14 +292,21 @@ p,
 .column-orange {
   border-radius: 20px;
   background-color: #ffefd1;
+  border: 3px solid #f08a3f;
 }
 .column-orange h2 {
   background-color: #f08a3f;
   color: white;
-  padding: 20px;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
+  padding: 15px;
+  border-top-left-radius: 17px;
+  border-top-right-radius: 17px;
 }
+.margin {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
 canvas {
   padding: 20px;
 }
